move to shared footer partial

--- a/source/layouts/article.haml
+++ b/source/layouts/article.haml
@@ -37,4 +37,4 @@
     $(window).load(function() {
         slabTextHeadlines();
     });
-  = partial 'layouts/google_analytics'
+  = partial 'layouts/footer'
