--- a/source/layouts/portfolio.haml
+++ b/source/layouts/portfolio.haml
@@ -12,12 +12,12 @@
             %a{:href => "/articles"} Articles
           %li
             %a{:href => "#"} Contact
-  
+
   .container
-    = yield  
+    = yield
 
   %footer.footer
     .container
       %p.pull-right
         %a{:href => "#"} Back to top
-  = partial 'layouts/google_analytics'
+  = partial 'layouts/footer'
