--- a/source/layouts/layout.haml
+++ b/source/layouts/layout.haml
@@ -40,28 +40,4 @@
     $(function() {
       slabTextHeadlines();
     });
-  = partial 'layouts/google_analytics'
-
-  /   %script{:src => "assets/js/jquery.gmap.js"}
-  / %script{:src => "http://maps.google.com/maps/api/js?sensor=false", :type => "text/javascript"}
-  / MAP
-  // :javascript
-  //   $(document).ready(function(){
-  //     $("#map").gMap({ controls: false,
-  //                       scrollwheel: false,
-  //                           draggable: true,
-  //                       markers: [{ latitude: 44.47698,
-  //                                   longitude: 1006.8,
-  //                                   icon: { image: "http://www.google.com/mapfiles/marker.png",
-  //                                           iconsize: [32, 47],
-  //                                           iconanchor: [32,47],
-  //                                           infowindowanchor: [12, 0] } }
-  //                                 ],
-  //                       icon: { image: "http://www.google.com/mapfiles/marker.png",
-  //                               iconsize: [26, 46],
-  //                               iconanchor: [12, 46],
-  //                               infowindowanchor: [12, 0] },
-  //                       latitude: 44.47698,
-  //                       longitude: 1006.8,
-  //                       zoom: 15, });
-  //   });
+  = partial 'layouts/footer'
