--- a/source/layouts/_footer.haml
+++ b/source/layouts/_footer.haml
@@ -1,5 +1,8 @@
 %footer.footer
   .container
+    %p.pull-left.muted
+      Established 2005 &middot; Databasically &copy;
+      = Time.now.year
 
     %p.pull-right
       %a{:href => "#"} Back to top
