--- a/source/layouts/_head.haml
+++ b/source/layouts/_head.haml
@@ -4,22 +4,14 @@
     %meta{:charset => "utf-8"}/
     / Always force latest IE rendering engine or request Chrome Frame
     %meta{:content => "IE=edge,chrome=1", "http-equiv" => "X-UA-Compatible"}/
-    / Use title if it's in the page YAML frontmatter
     %title= current_page.data.title || "Databasically"
     = stylesheet_link_tag "all"
+    <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
     = javascript_include_tag "all"
     %meta{:content => "width=device-width, initial-scale=1.0", :name => "viewport"}/
     %meta{:content => "Ruby enthusiasts, mostly based in Kansas City, KS, USA.", :name => "description"}/
-    / %meta{:content => "your name", :name => "author"}/
-    / %meta{:content => "keywords, go, here", :name => "keywords"}/
 
     %link{:href => "http://fonts.googleapis.com/css?family=Open+Sans:800,400,300", :rel => "stylesheet", :type => "text/css"}/
     / Le HTML5 shim, for IE6-8 support of HTML5 elements
     /[if lt IE 9]
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-    / fav and touch icons
-    / %link{:href => "assets/ico/favicon.ico", :rel => "shortcut icon"}/
-    / %link{:href => "assets/ico/apple-touch-icon-144-precomposed.png", :rel => "apple-touch-icon-precomposed", :sizes => "144x144"}/
-    / %link{:href => "assets/ico/apple-touch-icon-114-precomposed.png", :rel => "apple-touch-icon-precomposed", :sizes => "114x114"}/
-    / %link{:href => "assets/ico/apple-touch-icon-72-precomposed.png", :rel => "apple-touch-icon-precomposed", :sizes => "72x72"}/
-    / %link{:href => "assets/ico/apple-touch-icon-57-precomposed.png", :rel => "apple-touch-icon-precomposed"}/
