Disable unfinished portfolio section

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -34,63 +34,60 @@ title: Databasically
         = succeed '.' do
           %a{:href => "http://meetup.com/kcruby"} KC Ruby meetup
 / PORTFOLIO
-%section#work
-  %h1 Our Work.
-  / Start Portfolio
-  / Start Portfolio Navigation
-  %nav.primary.m-btn-group.toggle-buttons.clearfix
-    %ul
-      %li
-        %a.selected{"data-filter" => "*", :href => "#"} All
-      %li
-        %a{"data-filter" => ".web", :href => "#"} Web Applications
-      %li
-        %a{"data-filter" => ".ill", :href => "#"} Training
-      %li
-        %a{"data-filter" => ".logo", :href => "#"} Startups
-      %li
-        %a{"data-filter" => ".video", :href => "#"} Enterprise
-  / START Portfolio items
-  %h3 Coming soon. In the meantime, we can provide reference contacts on request.
-  / .clearfix
-  /   .portfolio
-  /     %figure.entry.web
-  /       %a{:href => "portfolio_detail.html"}
-  /         %img{:alt => "", :src => "/images/portfolio-image.jpg"}/
-  /     %figure.entry.web
-  /       %a{:href => "#"}
-  /         %img{:alt => "", :src => "/images/portfolio-image2.jpg"}/
-  /     %figure.entry.logo
-  /       %a{:href => "#"}
-  /         %img{:alt => "", :src => "/images/portfolio-image4.jpg"}/
-  /     %figure.entry.web
-  /       %a{:href => "#"}
-  /         %img{:alt => "", :src => "/images/portfolio-image6.jpg"}/
-  /     %figure.entry.print
-  /       %a{:href => "#"}
-  /         %img{:alt => "", :src => "/images/portfolio-image5.jpg"}/
-  /     %figure.entry.ill
-  /       %a{:href => "#"}
-  /         %img{:alt => "", :src => "/images/portfolio-image2.jpg"}/
-  /     %figure.entry.web.ill.logo
-  /       %a{:href => "#"}
-  /         %img{:alt => "", :src => "/images/portfolio-image4.jpg"}/
-  /     %figure.entry.print.logo
-  /       %a{:href => "#"}
-  /         %img{:alt => "", :src => "/images/portfolio-image6.jpg"}/
-  /     %figure.entry.video.logo
-  /       %a{:href => "#"}
-  /         %img{:alt => "", :src => "/images/portfolio-image3.jpg"}/
-  /     %figure.entry.web.print
-  /       %a{:href => "#"}
-  /         %img{:alt => "", :src => "/images/portfolio-image5.jpg"}/
-  /     %figure.entry.video.print
-  /       %a{:href => "#"}
-  /         %img{:alt => "", :src => "/images/portfolio-image.jpg"}/
-  /     %figure.entry.web
-  /       %a{:href => "#"}
-  /         %img{:alt => "", :src => "/images/portfolio-image4.jpg"}/
-  / End PORTFOLIO
+-#  %section#work
+-#    %h1 Our Work.
+-#    %nav.primary.m-btn-group.toggle-buttons.clearfix
+-#      %ul
+-#        %li
+-#          %a.selected{"data-filter" => "*", :href => "#"} All
+-#        %li
+-#          %a{"data-filter" => ".web", :href => "#"} Web Applications
+-#        %li
+-#          %a{"data-filter" => ".ill", :href => "#"} Training
+-#        %li
+-#          %a{"data-filter" => ".logo", :href => "#"} Startups
+-#        %li
+-#          %a{"data-filter" => ".video", :href => "#"} Enterprise-#
+-#    %h3 Coming soon. In the meantime, we can provide reference contacts -#  on request.
+-#    .clearfix
+-#      .portfolio
+-#        %figure.entry.web
+-#          %a{:href => "portfolio_detail.html"}
+-#            %img{:alt => "", :src => "/images/portfolio-image.jpg"}/
+-#        %figure.entry.web
+-#          %a{:href => "#"}
+-#            %img{:alt => "", :src => "/images/portfolio-image2.jpg"}/
+-#        %figure.entry.logo
+-#          %a{:href => "#"}
+-#            %img{:alt => "", :src => "/images/portfolio-image4.jpg"}/
+-#        %figure.entry.web
+-#          %a{:href => "#"}
+-#            %img{:alt => "", :src => "/images/portfolio-image6.jpg"}/
+-#        %figure.entry.print
+-#          %a{:href => "#"}
+-#            %img{:alt => "", :src => "/images/portfolio-image5.jpg"}/
+-#        %figure.entry.ill
+-#          %a{:href => "#"}
+-#            %img{:alt => "", :src => "/images/portfolio-image2.jpg"}/
+-#        %figure.entry.web.ill.logo
+-#          %a{:href => "#"}
+-#            %img{:alt => "", :src => "/images/portfolio-image4.jpg"}/
+-#        %figure.entry.print.logo
+-#          %a{:href => "#"}
+-#            %img{:alt => "", :src => "/images/portfolio-image6.jpg"}/
+-#        %figure.entry.video.logo
+-#          %a{:href => "#"}
+-#            %img{:alt => "", :src => "/images/portfolio-image3.jpg"}/
+-#        %figure.entry.web.print
+-#          %a{:href => "#"}
+-#            %img{:alt => "", :src => "/images/portfolio-image5.jpg"}/
+-#        %figure.entry.video.print
+-#          %a{:href => "#"}
+-#            %img{:alt => "", :src => "/images/portfolio-image.jpg"}/
+-#        %figure.entry.web
+-#          %a{:href => "#"}
+-#            %img{:alt => "", :src => "/images/portfolio-image4.jpg"}/
+
 / ABOUT
 %section#about
   %h1 Who We Are.
