--- a/source/layouts/layout.haml
+++ b/source/layouts/layout.haml
@@ -6,18 +6,18 @@
       .span3.bs-docs-sidebar
         %ul.nav.nav-list.bs-docs-sidenav
           %li.logo
-            %a{:href => "#masthead"}
+            %a{:href => "/#masthead"}
               %img{:alt => "logo", :src => "/images/databasically-square.png"}/
           %li
-            %a{:href => "#expert"} Expertise
+            %a{:href => "/#expert"} Expertise
+          -# %li
+          -#   %a{:href => "/#work"} Portfolio
           %li
-            %a{:href => "#work"} Portfolio
+            %a{:href => "/#about"} About Us
           %li
-            %a{:href => "#about"} About Us
+            %a{:href => "/#process"} Process
           %li
-            %a{:href => "#process"} Process
-          %li
-            %a{:href => "#contact"} Contact
+            %a{:href => "/#contact"} Contact
           %br/
           %li
             %a{:href => "/articles"} Blog
