--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -104,7 +104,7 @@ title: Databasically
       %a.member{:href => "index.html#contact"}
         %img{:alt => "", :src => "http://lorempixel.com/350/250/people?2"}/
       %h4 Willis F. Jackson III
-      %h5 Partner, Sales &amp; Marketing Director
+      %h5 Sales &amp; Marketing Director
       %p Recently took his hard knocks in two startups. Learned his lessons. Mentors early stage founders in lean startup and customer development methods.
       %p
         %a.m-btn.blue.btn-block{:href => "index.html#contact"} Contact
