--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -23,7 +23,7 @@ title: Databasically
     .span3
       %img{:alt => "", :src => "http://lorempixel.com/g/350/250/technics?2"}/
       %h4 User focus
-      %p Most developers will just build whatever you tell them to build. We make it a habit to tell you want not to build so we can figure out what will make the biggest difference for your business. Our customers love it.
+      %p Most developers will just build whatever you tell them to build. We make it a habit to tell you what not to build so we can figure out what will make the biggest difference for your business. Our customers love it.
     .span3
       %img{:alt => "", :src => "http://lorempixel.com/g/350/250/technics?3"}/
       %h4 Community leaders
