add next round information

--- a/source/2013-07-03-kansas-city-ruby-rtanque-league-round-one-results.html.haml
+++ b/source/2013-07-03-kansas-city-ruby-rtanque-league-round-one-results.html.haml
@@ -46,6 +46,9 @@ RTanque League.
   %i
     I'll update this with questions if you have them. Post to the meetup thread.
 
+%h2 Round Two Due: Monday, July 7th at midnight
+%p
+  We're going to run the next round live at KC Ruby, so get your entry in.  Even if you didn't enter round one, you can still play!
 
 %h2 Viewing the replays
 
