Add submission notes to round one page

--- a/source/2013-07-03-kansas-city-ruby-rtanque-league-round-one-results.html.haml
+++ b/source/2013-07-03-kansas-city-ruby-rtanque-league-round-one-results.html.haml
@@ -50,6 +50,22 @@ RTanque League.
 %p
   We're going to run the next round live at KC Ruby, so get your entry in.  Even if you didn't enter round one, you can still play!
 
+%h2 How to submit
+%p
+  %ul
+    %li upload your bot's code to a private gist
+    %li bot filename must end in .rb
+    %li please keep the same bot name in your class so we can compare
+    %li
+      fill out
+      = link_to "this google form", 'http://bit.ly/2013-kcruby-rtanque-signup'
+      with the following information:
+      %ul
+        %li your name
+        %li gist ID from above
+        %li twitter handle
+
+
 %h2 Viewing the replays
 
 %p Every match has been recorded, so you can grab the download and watch them to see what went well and what you need to improve on.
