Round avg health to 1 decimal

--- a/source/2013-07-09-kansas-city-ruby-rtanque-league-round-two-results.html.haml
+++ b/source/2013-07-09-kansas-city-ruby-rtanque-league-round-two-results.html.haml
@@ -37,7 +37,7 @@ RTanque League.
         %td= bot[0]
         %td= bot[1]
         %td= bot[2]
-        %td= bot[3]
+        %td= bot[3].round(1)
 
 %p For losses, remaining health is 0.  For draws, both bots get their remaining health.
 
