Use HTML entity

--- a/source/2013-07-09-kansas-city-ruby-rtanque-league-round-two-results.html.haml
+++ b/source/2013-07-09-kansas-city-ruby-rtanque-league-round-two-results.html.haml
@@ -25,7 +25,7 @@ RTanque League.
        ['MacGyver', 4, 6, 24.545454545454547],                   |
        ['DrunkBot', 4, 6, 18.545454545454547],                   |
        ['sir ticks a lot', 4, 4, 39.54545454545455],             |
-       ['Seek&Destroy', 2, 7, 18.90909090909091],                |
+       ['Seek&amp;Destroy', 2, 7, 18.90909090909091],            |
        ['jamesior_bot', 2, 8, 24.90909090909091],                |
        ['hacker', 0, 10, 1.0909090909090908],                    |
        ['wallhugger', 0, 6, 32.45454545454545],                  |
