update round two to round three in blogpost

--- a/source/2013-07-09-kansas-city-ruby-rtanque-league-round-two-results.html.haml
+++ b/source/2013-07-09-kansas-city-ruby-rtanque-league-round-two-results.html.haml
@@ -49,7 +49,7 @@ RTanque League.
   %i
     I'll update this with questions if you have them. Post to the meetup thread.
 
-%h2 Round Two Due: Sunday, July 14th at midnight
+%h2 Round Three Due: Sunday, July 14th at midnight
 %p
   We're going to run the next round live at KC Ruby, so get your entry in.  Even if you didn't enter the previous rounds, you can still play!
 
