adding links to pictures

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -94,7 +94,7 @@ title: Databasically
   .row
     .span3
       %a.member{:href => "index.html#contact"}
-        %img{:alt => "", :src => "http://lorempixel.com/350/250/people?1"}/
+        %img{:alt => "", :src => "https://si0.twimg.com/profile_images/1412575227/wes-square.jpg"}/
       %h4 Wes Garrison
       %h5 Founder, Technical Director
       %p Published his first Ruby on Rails application in 2005. The client loved it so much that we continue to actively develop it to this day.
@@ -102,7 +102,7 @@ title: Databasically
         %a.m-btn.blue.btn-block{:href => "#contact"} Contact
     .span3
       %a.member{:href => "index.html#contact"}
-        %img{:alt => "", :src => "http://lorempixel.com/350/250/people?2"}/
+        %img{:alt => "", :src => "https://si0.twimg.com/profile_images/1355325756/big-omaha-registration-2011-face.jpg"}/
       %h4 Willis F. Jackson III
       %h5 Sales &amp; Marketing Director
       %p Recently took his hard knocks in two startups. Learned his lessons. Mentors early stage founders in lean startup and customer development methods.
@@ -119,7 +119,7 @@ title: Databasically
         %a.m-btn.blue.btn-block{:href => "index.html#contact"} Contact
     .span3
       %a.member{:href => "index.html#contact"}
-        %img{:alt => "", :src => "http://lorempixel.com/350/250/people?4"}/
+        %img{:alt => "", :src => "https://si0.twimg.com/profile_images/1761821027/Dagtype.jpg"}/
       %h4 Matt Petty
       %h5 Developer
       %p Whiz with a camera. Rolls many sided dice with abandon. Pushes pixels and code with ease.
