added span text colors for later when we get it working

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -6,9 +6,11 @@ title: Databasically
   %h1 AT DATABASICALLY
   %h1
     WE
-    %span{:style => "color: #E74C3C;"} BUILD
+    %span{:style => "color: #0088CC;"} BUILD
   %h1 ROBUST WEB APPLICATIONS,
-  %h1 MENTOR STARTUPS,
+  %h1
+    %span{:style => "color: #0088CC;"}MENTOR 
+    STARTUPS,
   %h1 RESCUE ORPHANED APPS,
   %h1 TRAIN DEVELOPERS,
   %h1 AND HELP BUSINESSES GROW
