--- a/source/contact.html.haml
+++ b/source/contact.html.haml
@@ -4,7 +4,7 @@ layout: article
 / Wufoo form
 #form
   %h3 Let's start a discussion
-  %form#form5#contact-form{:name => "form5", :autocomplete => "off", :enctype => "multipart/form-data", :method => "post", :novalidate => "", :action => "https://databasically1.wufoo.com/forms/s7x1x7/#public"}
+  %form{:id => "form5", :name => "form5", :autocomplete => "off", :enctype => "multipart/form-data", :method => "post", :novalidate => "", :action => "https://databasically1.wufoo.com/forms/s7x1x7/#public"}
     %fieldset
       .row
         .holder.span8
@@ -14,7 +14,7 @@ layout: article
               #alert
             .bottom
         .field.span8
-          %input#Field3.input-text.m-wrap.m-ctrl-large{:name => "Field3 name", :type => "text", :value => "", :tabindex => "1", :onkeyup => "", :placeholder => "Your name"}/
+          %input#Field3.input-text.m-wrap.m-ctrl-large{:name => "Field3", :type => "text", :value => "", :tabindex => "1", :onkeyup => "", :placeholder => "Your name"}/
         .field.span8
           %input#Field4.input-text.m-wrap.m-ctrl-large{:name => "Field4", :type => "email", :spellcheck => "false", :value => "", :maxlength => "255", :tabindex => "2", :placeholder => "Your email"}/
         .field.span8
@@ -39,7 +39,7 @@ layout: article
               %input#Field6_3{:name => "Field6", :type => "radio", :value => "$100k+", :tabindex => "7"}
               $100k+
         .field.span8
-          %input.m-btn.blue#saveform{:name => "saveForm", :type => "submit", :value => "Let's talk"}
+          %input.m-btn.blue#saveForm{:name => "saveForm", :type => "submit", :value => "Let's talk"}
       %ul
         %li.hide
           %label{:for => "comment"} Do Not Fill This Out
