added temporary row to fix janky about us layout

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -119,6 +119,8 @@ title: Databasically
       %br
       %p
         %a.m-btn.blue.btn-block{:href => "index.html#contact"} Contact
+  / Temporary row added because the uneven photo sizes are borking up the layout. Can be removed later.
+  .row
     .span3
       %a.member{:href => "index.html#contact"}
         %img{:alt => "", :src => "https://si0.twimg.com/profile_images/1761821027/Dagtype.jpg"}/
