--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -1,40 +1,31 @@
 ---
 title: Databasically
 ---
+-# %section#masthead
+%h1 DATABASICALLY
 
-%section#masthead
-  %h1 AT DATABASICALLY
-  %h1
-    WE
-    %span{:style => "color: #0088CC;"} BUILD
-  %h1 ROBUST WEB APPLICATIONS,
-  %h1
-    %span{:style => "color: #0088CC;"}MENTOR 
-    STARTUPS,
-  %h1 RESCUE ORPHANED APPS,
-  %h1 TRAIN DEVELOPERS,
-  %h1 AND HELP BUSINESSES GROW
+
 / EXPERTISE
-%section#expert
-  %h1 What's in it for you.
-  .row.do
-    .span3
-      %img{:alt => "", :src => "http://lorempixel.com/g/350/250/technics?1"}/
-      %h4 Technical partners
-      %p You don't want to have to worry about the ability of your software developers, so we tell you when we are pushing the boundaries of our abilities. It doesn't happen that often.
-    .span3
-      %img{:alt => "", :src => "http://lorempixel.com/g/350/250/technics?2"}/
-      %h4 User focus
-      %p Most developers will just build whatever you tell them to build. We make it a habit to tell you what not to build so we can figure out what will make the biggest difference for your business. Our customers love it.
-    .span3
-      %img{:alt => "", :src => "http://lorempixel.com/g/350/250/technics?3"}/
-      %h4 Community leaders
-      %p
-        When you work with us, you are accessing our wide network so your project always has the perfect person developing for you. That's because we don't just do this as a day job. We love it so much, we organize
-        %a{:href => "http://rubymidwest.com"} Ruby Midwest
-        and
-        = succeed '.' do
-          %a{:href => "http://meetup.com/kcruby"} KC Ruby meetup
+-# %section#expert
+-#   %h1 What's in it for you.
+-#   .row.do
+-#     .span3
+-#       %img{:alt => "", :src => "http://lorempixel.com/g/350/250/technics?1"}/
+-#       %h4 Technical partners
+-#       %p You don't want to have to worry about the ability of your software -# developers, so we tell you when we are pushing the boundaries of our -# abilities. It doesn't happen that often.
+-#     .span3
+-#       %img{:alt => "", :src => "http://lorempixel.com/g/350/250/technics?2"}/
+-#       %h4 User focus
+-#       %p Most developers will just build whatever you tell them to build. We -# make it a habit to tell you what not to build so we can figure out what -# will make the biggest difference for your business. Our customers love it.
+-#     .span3
+-#       %img{:alt => "", :src => "http://lorempixel.com/g/350/250/technics?3"}/
+-#       %h4 Community leaders
+-#       %p
+-#         When you work with us, you are accessing our wide network so your -# project always has the perfect person developing for you. That's because -# we don't just do this as a day job. We love it so much, we organize
+-#         %a{:href => "http://rubymidwest.com"} Ruby Midwest
+-#         and
+-#         = succeed '.' do
+-#           %a{:href => "http://meetup.com/kcruby"} KC Ruby meetup
 / PORTFOLIO
 -#  %section#work
 -#    %h1 Our Work.
@@ -90,91 +81,50 @@ title: Databasically
 -#          %a{:href => "#"}
 -#            %img{:alt => "", :src => "/images/portfolio-image4.jpg"}/
 
-/ ABOUT
-%section#about
-  %h1 Who We Are.
-  .row
-    .span3
-      %a.member{:href => "index.html#contact"}
-        %img{:alt => "", :src => "https://si0.twimg.com/profile_images/1412575227/wes-square.jpg"}/
-      %h4 Wes Garrison
-      %h5 Founder, Technical Director
-      %p Published his first Ruby on Rails application in 2005. The client loved it so much that we continue to actively develop it to this day.
-      %p
-        %a.m-btn.blue.btn-block{:href => "#contact"} Contact
-    .span3
-      %a.member{:href => "index.html#contact"}
-        %img{:alt => "", :src => "https://si0.twimg.com/profile_images/1355325756/big-omaha-registration-2011-face.jpg"}/
-      %h4 Willis F. Jackson III
-      %h5 Sales &amp; Marketing Director
-      %p Recently took his hard knocks in two startups. Learned his lessons. Mentors early stage founders in lean startup and customer development methods.
-      %p
-        %a.m-btn.blue.btn-block{:href => "index.html#contact"} Contact
-    .span3
-      %a.member{:href => "team_example.html"}
-        %img{:alt => "", :src => "http://lorempixel.com/350/250/people?3"}/
-      %h4 Chad Metcalf
-      %h5 Developer, Chief Mustache Officer
-      %p Tests new boundaries of facial hair. Hardcore automated tester. Soccer enthusiast and thrower of discs.
-      %br
-      %p
-        %a.m-btn.blue.btn-block{:href => "index.html#contact"} Contact
-  / Temporary row added because the uneven photo sizes are borking up the layout. Can be removed later.
-  .row
-    .span3
-      %a.member{:href => "index.html#contact"}
-        %img{:alt => "", :src => "https://si0.twimg.com/profile_images/1761821027/Dagtype.jpg"}/
-      %h4 Matt Petty
-      %h5 Developer
-      %p Whiz with a camera. Rolls many sided dice with abandon. Pushes pixels and code with ease.
-      %br
-      %p
-        %a.m-btn.blue.btn-block{:href => "index.html#contact"} Contact
-    .span3
-      %a.member{:href => "index.html#contact"}
-        %img{:alt => "", :src => "http://lorempixel.com/350/250/people?5"}/
-      %h4 Nick Fausnight
-      %h5 Developer, Lead Intern
-      %p As a member of the Blue Valley CAPS educational program, we expected him to be good. But we didn't expect him to be THIS good.
-      %p
-        %a.m-btn.blue.btn-block{:href => "index.html#contact"} Contact
-    .span3
-      %a.member{:href => "index.html#contact"}
-        %img{:alt => "", :src => "http://lorempixel.com/350/250/people?6"}/
-      %h4 Katelyn Neely
-      %h5 Admin, Cat Lady
-      %p Cracks whips. Can jump cars with a single bound.
-      %br
-      %br
-      %p
-        %a.m-btn.blue.btn-block{:href => "index.html#contact"} Contact
+-# / ABOUT
+-# %section#about
+-#   %h1 Who We Are.
+-#   .row
+-#     .span3
+-#       %a.member{:href => "index.html#contact"}
+-#         %img{:alt => "", :src => "https://si0.twimg.-# com/profile_images/1412575227/wes-square.jpg"}/
+-#       %h4 Wes Garrison
+-#       %p Published his first Ruby on Rails application in 2005. The client loved -# it so much that we continue to actively develop it to this day.
+-#
 / PROCESS
-%section#process
-  %h1 No fancy graphics.
-  %h2 Just substance.
-  .row
-    .span6
-      %h3 Discover
-      %p We work quickly to figure out your objectives and requirements so you get the business result you want without having to worry.
-      %h3 Design
-      %p We will take your requirements and translate them into a system architecture and a set of user stories and views. If you have a designer that you like to work with, we are ok with that too.
-      %h3 Develop
-      %p This is where our strength really starts to shine. We write code that is easy to maintain so you spend less money over the lifetime of your project.
-      %h3 Deploy
-      %p We put new code on the server early and often, that way you can play around with it and so we can work together to discover new requirements.
+-# %section#process
+-#   %h1 No fancy graphics.
+-#   %h2 Just substance.
+-#   .row
+-#     .span6
+-#       %h3 Discover
+-#       %p We work quickly to figure out your objectives and requirements so you -# get the business result you want without having to worry.
+-#       %h3 Design
+-#       %p We will take your requirements and translate them into a system -# architecture and a set of user stories and views. If you have a designer -# that you like to work with, we are ok with that too.
+-#       %h3 Develop
+-#       %p This is where our strength really starts to shine. We write code that -# is easy to maintain so you spend less money over the lifetime of your -# project.
+-#       %h3 Deploy
+-#       %p We put new code on the server early and often, that way you can play around with it and so we can work together to discover new requirements.
 / end PROCESS
 / CONTACT
-%section#contact
+
+-# %section#contact
+%contact
   %h1 Hello There.
   / CONTACT
   .row
     / MAP
     / #map.container.hidden-phone
     %div{:style => "text-align: center;"}
-      %a.btn.btn-large{:href => "/contact", :style => "font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; font-weight: bold; font-size: 300%; padding: 20px; background-color: #E01B00; background-image: none; color: #ffffff;"} Let's talk about you
+      %a.btn.btn-large{:href => "/contact", :style => "font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; font-weight: bold; font-size: 300%; padding: 20px; background-color: #E01B00; background-image: none; color: #ffffff;"} Get in touch
 
-:javascript
-  $("ul.nav li a[href^='#']").on('click', function(e) {
-   e.preventDefault();
-   $('html, body').animate({ scrollTop: $(this.hash).offset().top }, 300);
-  });
+- page_articles[0,8].each_with_index do |article, i|
+  .row
+    .span2.muted= article.date.strftime('%b %e %Y')
+    .span10= link_to article.title, article
+
+-# :javascript
+-#   $("ul.nav li a[href^='#']").on('click', function(e) {
+-#    e.preventDefault();
+-#    $('html, body').animate({ scrollTop: $(this.hash).offset().top }, 300);
+-#   });
