--- a/source/layouts/layout.haml
+++ b/source/layouts/layout.haml
@@ -8,16 +8,16 @@
           %li.logo
             %a{:href => "/#masthead"}
               %img{:alt => "logo", :src => "/images/databasically-square.png"}/
-          %li
-            %a{:href => "/#expert"} Expertise
+          -# %li
+          -#   %a{:href => "/#expert"} Expertise
           -# %li
           -#   %a{:href => "/#work"} Portfolio
+          -# %li
+          -#   %a{:href => "/#about"} About Us
+          -# %li
+          -#   %a{:href => "/#process"} Process
           %li
-            %a{:href => "/#about"} About Us
-          %li
-            %a{:href => "/#process"} Process
-          %li
-            %a{:href => "/#contact"} Contact
+            %a{:href => "/contact"} Contact
           %br/
           %li
             %a{:href => "/articles"} Blog
