Update title of graphs article

--- a/source/2014-01-03-misleading-people-with-graphs.html.erb
+++ b/source/2014-01-03-misleading-people-with-graphs.html.erb
@@ -1,6 +1,6 @@
 ---
 layout: article
-title: Misleading people with statistics
+title: Misleading people with graphs
 post_date: 2014-01-04
 ---
 <br><br>
