--- a/source/2014-05-13-converting-a-github-issue-to-a-pull-request.html.erb
+++ b/source/2014-05-13-converting-a-github-issue-to-a-pull-request.html.erb
@@ -61,6 +61,10 @@ command = %Q(
 
 puts `#{command}`<% end %>
 
+<h3>Demo (given at KC Ruby)</h3>
+
+<div style="padding-left:30px"><iframe width="640" height="480" src="//www.youtube.com/embed/5EA9DGNSUdo" frameborder="0" allowfullscreen></iframe></div>
+
 <h3>Questions</h3>
 After I gave this talk at KC Ruby, there were a few questions:
 <dl>
