Add git training page

--- a/source/layouts/layout.haml
+++ b/source/layouts/layout.haml
@@ -21,6 +21,9 @@
           %br/
           %li
             %a{:href => "/articles"} Blog
+          %br/
+          %li
+            %a{:href => "/git/training"} Git Training
       .span9
         = yield
 
