Update bootstrap for cleanup

--- a/source/stylesheets/all.css
+++ b/source/stylesheets/all.css
@@ -1,12 +1,8 @@
 /*
 
  *= require bootstrap
- *= require bootstrap-responsive
- *= require docs
- *= require m-forms
- *= require m-buttons
+ *= require bootstrap-theme
  *= require custom
- *= require syntax
 
  */
 
